--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 Soy un desarrollador web autodidacta con experiencia en el desarrollo de sitios web y aplicaciones web. 
                                 Me encanta trabajar con tecnologías web modernas y crear productos web de alta calidad.
                             </p>
-                            <a href="#contact" class="btn">Para Mas Unformacion</a>
+                            <a href="#contact" class="btn">Conáctame</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="image/hero.jpg" alt="hero">
@@ -53,11 +53,188 @@
                 </div>
              </section>
             <!-- ===== Home Section End =====-->
+            <!-- ===== About Section Start =====-->
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>Me Llamo David y soy <span>Diseñador Web</span></h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat repellendus saepe perferendis amet illum! Nihil alias ipsum itaque quidem facilis. Vitae consequatur harum laudantium eligendi ratione debitis. Consectetur adipisci minima, esse reprehenderit dolore vero minus beatae odit itaque, provident enim nam facilis delectus officia sit corrupti sint asperiores dolorum. Repudiandae non ducimus sint necessitatibus!</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Fecha de Nacimiento: <span>12 de Julio 1991</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Edad: <span>33</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Sitio Web: <span>www.domain.com</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Email: <span>nombre@domain.com</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Grado: <span>CS</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Telefono: <span>+123 456 7890</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Ciudad: <span>Loja</span>
+                                            </p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>
+                                                Freelance: <span>Disponible</span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="#" class="btn">Descargar CV</a>
+                                            <a href="#contact" class="btn hire'me">Contactame</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>CSS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 75%"></div>
+                                                <div class="skill-percent">75%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>JS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 90%"></div>
+                                                <div class="skill-percent">90%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>HTML</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 80%"></div>
+                                                <div class="skill-percent">80%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>REACT</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 50%"></div>
+                                                <div class="skill-percent">50%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Educacion</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== timeline item ===== -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2023 - Actualidad
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ciencias de la Computacion</h4>
+                                                    <p class="timeline-text">Universidad Nacional de Loja</p>
+                                                 </div>
+                                                 <!-- ===== timeline item ===== -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2023 - Actualidad
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ciencias de la Computacion</h4>
+                                                    <p class="timeline-text">Universidad Nacional de Loja</p>
+                                                 </div>
+                                                 <!-- ===== timeline item ===== -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2023 - Actualidad
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ciencias de la Computacion</h4>
+                                                    <p class="timeline-text">Universidad Nacional de Loja</p>
+                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experiencia</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== timeline item ===== -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2023 - Actualidad
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ciencias de la Computacion</h4>
+                                                    <p class="timeline-text">Universidad Nacional de Loja</p>
+                                                 </div>
+                                                 <!-- ===== timeline item ===== -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2023 - Actualidad
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ciencias de la Computacion</h4>
+                                                    <p class="timeline-text">Universidad Nacional de Loja</p>
+                                                 </div>
+                                                 <!-- ===== timeline item ===== -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2023 - Actualidad
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ciencias de la Computacion</h4>
+                                                    <p class="timeline-text">Universidad Nacional de Loja</p>
+                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ===== About Section End =====-->
+            
          </div>
         <!-- ===== Main Content End =====-->
-
-
     </div>
-
 </body>
 </html>
